Updated Guidance Tests;