@@ -11,6 +11,7 @@ import com.reps.demogcloud.services.OfficeReferralService;
 import com.reps.demogcloud.services.PunishmentService;
 import com.reps.demogcloud.utils.DtoUtils;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.authentication.AnonymousAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
@@ -18,6 +19,7 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -25,12 +27,23 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class TeacherDtoService {
 
+    private static final String POSITIVE_BEHAVIOR_SHOUT_OUT = "Positive Behavior Shout Out!";
+    private static final String BEHAVIORAL_CONCERN = "Behavioral Concern";
+
     private final PunishmentService punishmentService;
     private final OfficeReferralService officeReferralService;
     private final EmployeeService employeeService;
     private final DtoUtils dtoUtils;
 
     public TeacherOverviewDTO getTeacherOverData() throws Exception {
+
+        //Method filter punishments by teachers
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null
+                || !authentication.isAuthenticated()
+                || authentication instanceof AnonymousAuthenticationToken) {
+            throw new IllegalStateException("No authenticated user found");
+        }
 
         //Reduce Time by Making Fewer Calls Add Filter Methods
         // -> this is global call to get all school related punishments
@@ -44,14 +57,15 @@ public class TeacherDtoService {
         //From this list created teacher response with student names included
         List<TeacherDTO> allSchoolReferralsWithDisplayInformation = officeReferralService.getTeacherResponse(allSchoolReferrals);
 
-        //Method filter punishments by teachers
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-
         //Get Shout-Outs Only, School Wide
         dtoUtils.listOfShoutOuts(allSchoolPunishmentsWithDisplayInformation);
 
         //Get Employee and School Information based on who is the logged-in user
         Employee teacher = employeeService.findByLoggedInEmployee();
+        if (teacher == null) {
+            throw new IllegalStateException("Logged in teacher not found");
+        }
+
         Optional<School> schoolOpt = employeeService.getEmployeeSchool();
 
         School school = schoolOpt.orElseThrow(() ->
@@ -60,40 +74,54 @@ public class TeacherDtoService {
 
         // Step 1: Collect all student emails from the teacher's class rosters
         List<String> classRosterStudentEmails;
-        if (teacher != null && teacher.getClasses() != null) {
+        if (teacher.getClasses() != null) {
             classRosterStudentEmails = teacher.getClasses().stream()
-                    .flatMap(classRoster -> classRoster.getClassRoster().stream())
-                    .toList();
+                    .filter(Objects::nonNull)
+                    .map(Employee.ClassRoster::getClassRoster)
+                    .filter(Objects::nonNull)
+                    .flatMap(List::stream)
+                    .collect(Collectors.toList());
         } else {
             classRosterStudentEmails = new ArrayList<>();
         }
 
 // Step 2: Filter punishments by the teacher and the class roster student emails
         List<TeacherDTO> punishmentsFilteredByTeacher = allSchoolPunishmentsWithDisplayInformation.stream()
-                .filter(punishment -> punishment.getTeacherEmail().equalsIgnoreCase(authentication.getName()) &&
-                        classRosterStudentEmails.contains(punishment.getStudentEmail()))
+                .filter(punishment -> punishment.getTeacherEmail() != null
+                        && punishment.getStudentEmail() != null
+                        && punishment.getTeacherEmail().equalsIgnoreCase(authentication.getName())
+                        && classRosterStudentEmails.contains(punishment.getStudentEmail()))
                 .collect(Collectors.toList());
 
         // Separate write-ups, shout-outs, and behavioral concerns
         List<TeacherDTO> writeUpResponse = punishmentsFilteredByTeacher.stream()
-                .filter(punishment -> !punishment.getInfractionName().equalsIgnoreCase("Positive Behavior Shout Out!") &&
-                        !punishment.getInfractionName().equalsIgnoreCase("Behavioral Concern"))
+                .filter(punishment -> punishment.getInfractionName() != null
+                        && !punishment.getInfractionName().equalsIgnoreCase(POSITIVE_BEHAVIOR_SHOUT_OUT)
+                        && !punishment.getInfractionName().equalsIgnoreCase(BEHAVIORAL_CONCERN))
                 .collect(Collectors.toList());
 
         List<TeacherDTO> shoutOutsResponse = punishmentsFilteredByTeacher.stream()
-                .filter(punishment -> punishment.getInfractionName().equalsIgnoreCase("Positive Behavior Shout Out!"))
+                .filter(punishment -> punishment.getInfractionName() != null
+                        && punishment.getInfractionName().equalsIgnoreCase(POSITIVE_BEHAVIOR_SHOUT_OUT))
                 .sorted(Comparator.comparing(TeacherDTO::getTimeCreated).reversed())
                 .collect(Collectors.toList());
 
         // Step 3: Filter office referrals to only include students in the teacher's class roster
         List<TeacherDTO> filteredSchoolReferrals = allSchoolReferralsWithDisplayInformation.stream()
-                .filter(referral -> classRosterStudentEmails.contains(referral.getStudentEmail()))
+                .filter(referral -> referral.getStudentEmail() != null
+                        && classRosterStudentEmails.contains(referral.getStudentEmail()))
                 .collect(Collectors.toList());
 
         // Update weekly punishment counts for each class in the teacher's roster
-        assert teacher != null;
         dtoUtils.updateWeeklyPunishmentsForTeacherClasses(teacher, punishmentsFilteredByTeacher);
 
-        return new TeacherOverviewDTO(punishmentsFilteredByTeacher, writeUpResponse, shoutOutsResponse, filteredSchoolReferrals, teacher, school);
+        return new TeacherOverviewDTO(
+                punishmentsFilteredByTeacher,
+                writeUpResponse,
+                shoutOutsResponse,
+                filteredSchoolReferrals,
+                teacher,
+                school
+        );
     }
 }
